--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   wordpress:
-    image: gcr.io/digital-ucdavis-edu/simple-wp:sandbox
+    image: gcr.io/digital-ucdavis-edu/ucdlib-awards:main
     env_file:
       - .env
     ports:
@@ -13,11 +13,11 @@ services:
         define('WP_SITEURL', '${SERVER_URL}' );
         define('WP_HOME', '${SERVER_URL}' );
         define('FORCE_SSL_ADMIN', true);
-      OIDC_CLIENT_ID: ${OIDC_CLIENT_ID:-simple-wp}
-      OIDC_ENDPOINT_LOGIN_URL: ${OIDC_ENDPOINT_LOGIN_URL:-https://sandbox.auth.library.ucdavis.edu/realms/internal/protocol/openid-connect/auth}
+      OIDC_CLIENT_ID: ${OIDC_CLIENT_ID:-{{OIDC_CLIENT_ID}}}
+      OIDC_ENDPOINT_LOGIN_URL: ${OIDC_ENDPOINT_LOGIN_URL:-https://sandbox.auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/auth}
       OIDC_ENDPOINT_USERINFO_URL: ${OIDC_ENDPOINT_USERINFO_URL:-}
-      OIDC_ENDPOINT_TOKEN_URL: ${OIDC_ENDPOINT_TOKEN_URL:-https://sandbox.auth.library.ucdavis.edu/realms/internal/protocol/openid-connect/token}
-      OIDC_ENDPOINT_LOGOUT_URL: ${OIDC_ENDPOINT_LOGOUT_URL:-https://sandbox.auth.library.ucdavis.edu/realms/internal/protocol/openid-connect/logout}
+      OIDC_ENDPOINT_TOKEN_URL: ${OIDC_ENDPOINT_TOKEN_URL:-https://sandbox.auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/token}
+      OIDC_ENDPOINT_LOGOUT_URL: ${OIDC_ENDPOINT_LOGOUT_URL:-https://sandbox.auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/logout}
       OIDC_CLIENT_SCOPE: ${OIDC_CLIENT_SCOPE:-openid profile email roles}
       OIDC_LOGIN_TYPE: ${OIDC_LOGIN_TYPE:-auto}
       OIDC_CREATE_IF_DOES_NOT_EXIST: ${OIDC_CREATE_IF_DOES_NOT_EXIST:-true}
@@ -32,11 +32,11 @@ services:
       - wp-logs-data:/var/log/wordpress
 
   init:
-    image: gcr.io/digital-ucdavis-edu/simple-wp-utils:sandbox
+    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:main
     env_file:
       - .env
     environment:
-      GC_BUCKET_BACKUPS: ${GC_BUCKET_BACKUPS:-itis-backups/simple-wp}
+      GC_BUCKET_BACKUPS: ${GC_BUCKET_BACKUPS:-itis-backups/ucdlib-awards}
       GC_PROJECT: ${GC_PROJECT:-digital-ucdavis-edu}
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-db.sql.gz}
       UPLOADS_FILE_NAME: ${UPLOADS_FILE_NAME:-uploads.tar.gz}
@@ -50,11 +50,11 @@ services:
     command: ./init/init.sh
 
   backup:
-    image: gcr.io/digital-ucdavis-edu/simple-wp-utils:sandbox
+    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:main
     env_file:
       - .env
     environment:
-      GC_BUCKET_BACKUPS: ${GC_BUCKET_BACKUPS:-itis-backups/simple-wp}
+      GC_BUCKET_BACKUPS: ${GC_BUCKET_BACKUPS:-itis-backups/ucdlib-awards}
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-db.sql.gz}
       UPLOADS_FILE_NAME: ${UPLOADS_FILE_NAME:-uploads.tar.gz}
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
