start cycle admin section

--- a/deploy/templates/local-dev.yaml
+++ b/deploy/templates/local-dev.yaml
@@ -16,6 +16,7 @@ services:
       WORDPRESS_DISABLE_FATAL_ERROR_HANDLER: ${WORDPRESS_DISABLE_FATAL_ERROR_HANDLER:-1}
       WORDPRESS_CONFIG_EXTRA: |
         define( 'WP_ENVIRONMENT_TYPE', 'local' );
+      APP_ENV: ${APP_ENV:-dev}
       OIDC_CLIENT_ID: ${OIDC_CLIENT_ID:-{{OIDC_CLIENT_ID}}}
       OIDC_ENDPOINT_LOGIN_URL: ${OIDC_ENDPOINT_LOGIN_URL:-{{OIDC_ENDPOINT_LOGIN_URL}}}
       OIDC_ENDPOINT_USERINFO_URL: ${OIDC_ENDPOINT_USERINFO_URL:-{{OIDC_ENDPOINT_USERINFO_URL}}}
