--- a/src/plugins/ucdlib-awards/assets/package.json
+++ b/src/plugins/ucdlib-awards/assets/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@ucd-lib/cork-app-utils": "^5.1.0",
+    "@ucd-lib/theme-elements": "^1.2.4",
     "@ucd-lib/theme-sass": "^5.0.16",
     "breakpoint-sass": "^3.0.0",
     "lit": "^2.8.0",
