--- a/deploy/templates/local-dev.yaml
+++ b/deploy/templates/local-dev.yaml
@@ -38,6 +38,7 @@ services:
       - ../../src/plugins/graduate-student-prize:{{WP_PLUGIN_DIR}}/graduate-student-prize
       - ../../src/plugins/lang-prize:{{WP_PLUGIN_DIR}}/lang-prize
       - ../../src/plugins/ucdlib-awards:{{WP_PLUGIN_DIR}}/ucdlib-awards
+      # - ../../../forminator-theme-styles:{{WP_PLUGIN_DIR}}/forminator-theme-styles
 
   init:
     image: {{APP_UTILS_IMAGE_NAME_TAG}}
