--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       OIDC_CREATE_IF_DOES_NOT_EXIST: ${OIDC_CREATE_IF_DOES_NOT_EXIST:-true}
       OIDC_LINK_EXISTING_USERS: ${OIDC_LINK_EXISTING_USERS:-true}
       OIDC_REDIRECT_USER_BACK: ${OIDC_REDIRECT_USER_BACK:-true}
-      OIDC_ENFORCE_PRIVACY: ${OIDC_ENFORCE_PRIVACY:-false}
+      OIDC_ENFORCE_PRIVACY: ${OIDC_ENFORCE_PRIVACY:-}
     tmpfs:
       - /run
       - /tmp
