--- a/deploy/templates/deployment.yaml
+++ b/deploy/templates/deployment.yaml
@@ -9,6 +9,9 @@ services:
     restart: always
     environment:
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
+      WORDPRESS_DB_DATABASE: ${DB_DATABASE}
+      WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
+      WORDPRESS_DB_USER: ${DB_USER}
       WORDPRESS_CONFIG_EXTRA: |
         define('WP_SITEURL', '${SERVER_URL}' );
         define('WP_HOME', '${SERVER_URL}' );
@@ -40,6 +43,10 @@ services:
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-{{BACKUP_FILE_NAME}}}
       UPLOADS_FILE_NAME: ${UPLOADS_FILE_NAME:-{{UPLOADS_FILE_NAME}}}
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
+      WORDPRESS_DB_DATABASE: ${DB_DATABASE}
+      WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
+      WORDPRESS_DB_USER: ${DB_USER}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     depends_on:
       - db
       - wordpress
@@ -57,6 +64,10 @@ services:
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-{{BACKUP_FILE_NAME}}}
       UPLOADS_FILE_NAME: ${UPLOADS_FILE_NAME:-{{UPLOADS_FILE_NAME}}}
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
+      WORDPRESS_DB_DATABASE: ${DB_DATABASE}
+      WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
+      WORDPRESS_DB_USER: ${DB_USER}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     depends_on:
       - db
       - wordpress
@@ -70,6 +81,11 @@ services:
     restart: always
     env_file:
       - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - db-data:/var/lib/mysql
     ulimits:
