--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   wordpress:
-    image: gcr.io/digital-ucdavis-edu/ucdlib-awards:main
+    image: gcr.io/digital-ucdavis-edu/ucdlib-awards:v1.0.0
     env_file:
       - .env
     ports:
@@ -9,20 +9,23 @@ services:
     restart: always
     environment:
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
+      WORDPRESS_DB_DATABASE: ${DB_DATABASE}
+      WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
+      WORDPRESS_DB_USER: ${DB_USER}
       WORDPRESS_CONFIG_EXTRA: |
         define('WP_SITEURL', '${SERVER_URL}' );
         define('WP_HOME', '${SERVER_URL}' );
         define('FORCE_SSL_ADMIN', true);
-      OIDC_ENDPOINT_LOGIN_URL: ${OIDC_ENDPOINT_LOGIN_URL:-https://sandbox.auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/auth}
+      OIDC_ENDPOINT_LOGIN_URL: ${OIDC_ENDPOINT_LOGIN_URL:-https://auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/auth}
       OIDC_ENDPOINT_USERINFO_URL: ${OIDC_ENDPOINT_USERINFO_URL:-}
-      OIDC_ENDPOINT_TOKEN_URL: ${OIDC_ENDPOINT_TOKEN_URL:-https://sandbox.auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/token}
-      OIDC_ENDPOINT_LOGOUT_URL: ${OIDC_ENDPOINT_LOGOUT_URL:-https://sandbox.auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/logout}
+      OIDC_ENDPOINT_TOKEN_URL: ${OIDC_ENDPOINT_TOKEN_URL:-https://auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/token}
+      OIDC_ENDPOINT_LOGOUT_URL: ${OIDC_ENDPOINT_LOGOUT_URL:-https://auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/logout}
       OIDC_CLIENT_SCOPE: ${OIDC_CLIENT_SCOPE:-openid profile email roles}
       OIDC_LOGIN_TYPE: ${OIDC_LOGIN_TYPE:-auto}
       OIDC_CREATE_IF_DOES_NOT_EXIST: ${OIDC_CREATE_IF_DOES_NOT_EXIST:-true}
       OIDC_LINK_EXISTING_USERS: ${OIDC_LINK_EXISTING_USERS:-true}
       OIDC_REDIRECT_USER_BACK: ${OIDC_REDIRECT_USER_BACK:-true}
-      OIDC_ENFORCE_PRIVACY: ${OIDC_ENFORCE_PRIVACY:-}
+      OIDC_ENFORCE_PRIVACY: ${OIDC_ENFORCE_PRIVACY:-false}
     tmpfs:
       - /run
       - /tmp
@@ -31,7 +34,7 @@ services:
       - wp-logs-data:/var/log/wordpress
 
   init:
-    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:main
+    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:v1.0.0
     env_file:
       - .env
     environment:
@@ -40,6 +43,10 @@ services:
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-db.sql.gz}
       UPLOADS_FILE_NAME: ${UPLOADS_FILE_NAME:-uploads.tar.gz}
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
+      WORDPRESS_DB_DATABASE: ${DB_DATABASE}
+      WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
+      WORDPRESS_DB_USER: ${DB_USER}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     depends_on:
       - db
       - wordpress
@@ -49,7 +56,7 @@ services:
     command: ./init/init.sh
 
   backup:
-    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:main
+    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:v1.0.0
     env_file:
       - .env
     environment:
@@ -57,6 +64,10 @@ services:
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-db.sql.gz}
       UPLOADS_FILE_NAME: ${UPLOADS_FILE_NAME:-uploads.tar.gz}
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
+      WORDPRESS_DB_DATABASE: ${DB_DATABASE}
+      WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
+      WORDPRESS_DB_USER: ${DB_USER}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     depends_on:
       - db
       - wordpress
@@ -70,6 +81,11 @@ services:
     restart: always
     env_file:
       - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - db-data:/var/lib/mysql
     ulimits:
