--- a/deploy/templates/local-dev.yaml
+++ b/deploy/templates/local-dev.yaml
@@ -86,6 +86,7 @@ services:
     volumes:
       - uploads-data:/uploads
       - ../utils/backup:/deploy-utils/backup
+      - ../utils/wp-scripts:/deploy-utils/wp-scripts
       - ../gc-writer-key.json:/etc/service-account.json
     command: ./tail.sh
     # command: "./backup/entrypoint.sh"
