--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   wordpress:
-    image: gcr.io/digital-ucdavis-edu/ucdlib-awards:sandbox
+    image: gcr.io/digital-ucdavis-edu/ucdlib-awards:v1.1.0
     env_file:
       - .env
     ports:
@@ -34,7 +34,7 @@ services:
       - wp-logs-data:/var/log/wordpress
 
   init:
-    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:sandbox
+    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:v1.1.0
     env_file:
       - .env
     environment:
@@ -56,7 +56,7 @@ services:
     command: ./init/init.sh
 
   backup:
-    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:sandbox
+    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:v1.1.0
     env_file:
       - .env
     environment:
