first stab at cork-build

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ node_modules
 .DS_Store
 gc-writer-key.json
 gc-reader-key.json
-ucdlib-awards-local-dev
 src/plugins/ucdlib-awards/assets/public/js
+secrets
