--- a/deploy/compose/ucdlib-awards-grad-prize/compose.yaml
+++ b/deploy/compose/ucdlib-awards-grad-prize/compose.yaml
@@ -1,21 +1,32 @@
-version: '3'
+x-variables:
+  main-image: &main-image us-west1-docker.pkg.dev/digital-ucdavis-edu/wordpress/ucdlib-awards:sandbox
+  utils-image: &utils-image us-west1-docker.pkg.dev/digital-ucdavis-edu/wordpress/ucdlib-awards-utils:sandbox
+
 services:
   wordpress:
-    image: gcr.io/digital-ucdavis-edu/ucdlib-awards:v1.1.0
+    image: *main-image
     env_file:
       - .env
     ports:
       - ${HOST_PORT:-3000}:80
     restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "2"
     environment:
+      SERVER_URL: ${SERVER_URL:-https://graduate-student-prize.library.ucdavis.edu}
+      UCDLIB_AWARDS_EMAILING_ENABLED: ${UCDLIB_AWARDS_EMAILING_ENABLED:-true}
+      APP_REPORT_ERRORS_ENABLED: ${APP_REPORT_ERRORS_ENABLED:-true}
+      APP_REPORT_ERRORS_URL: ${APP_REPORT_ERRORS_URL:-https://client-error-reporter-akwemh35fa-uw.a.run.app}
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
-      WORDPRESS_DB_DATABASE: ${DB_DATABASE}
+      WORDPRESS_DB_DATABASE: ${DB_DATABASE:-wordpress}
       WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
-      WORDPRESS_DB_USER: ${DB_USER}
+      WORDPRESS_DB_USER: ${DB_USER:-wordpress}
       WORDPRESS_CONFIG_EXTRA: |
-        define('WP_SITEURL', '${SERVER_URL}' );
-        define('WP_HOME', '${SERVER_URL}' );
         define('FORCE_SSL_ADMIN', true);
+      OIDC_CLIENT_ID: ${OIDC_CLIENT_ID:-graduate-prize}
       OIDC_ENDPOINT_LOGIN_URL: ${OIDC_ENDPOINT_LOGIN_URL:-https://auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/auth}
       OIDC_ENDPOINT_USERINFO_URL: ${OIDC_ENDPOINT_USERINFO_URL:-}
       OIDC_ENDPOINT_TOKEN_URL: ${OIDC_ENDPOINT_TOKEN_URL:-https://auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/token}
@@ -34,46 +45,53 @@ services:
       - wp-logs-data:/var/log/wordpress
 
   init:
-    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:v1.1.0
+    image: *utils-image
     env_file:
       - .env
     environment:
+      RUN_INIT: "true"
+      INIT_DATA_ENV: ${INIT_DATA_ENV:-graduate-prize}
+      SERVER_URL: ${SERVER_URL:-https://graduate-student-prize.library.ucdavis.edu}
       GC_BUCKET_BACKUPS: ${GC_BUCKET_BACKUPS:-itis-backups/ucdlib-awards}
       GC_PROJECT: ${GC_PROJECT:-digital-ucdavis-edu}
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-db.sql.gz}
       UPLOADS_FILE_NAME: ${UPLOADS_FILE_NAME:-uploads.tar.gz}
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
-      WORDPRESS_DB_DATABASE: ${DB_DATABASE}
+      WORDPRESS_DB_DATABASE: ${DB_DATABASE:-wordpress}
       WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
-      WORDPRESS_DB_USER: ${DB_USER}
+      WORDPRESS_DB_USER: ${DB_USER:-wordpress}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     depends_on:
       - db
       - wordpress
     volumes:
       - uploads-data:/uploads
-      - ./gc-reader-key.json:/etc/service-account.json
+      - ../../secrets/gc-reader-key.json:/etc/service-account.json
     command: ./init/init.sh
 
   backup:
-    image: gcr.io/digital-ucdavis-edu/ucdlib-awards-utils:v1.1.0
+    image: *utils-image
     env_file:
       - .env
+    restart: always
     environment:
+      RUN_BACKUP: "true"
+      BACKUP_DATA_ENV: ${BACKUP_DATA_ENV:-graduate-prize}
+      SERVER_URL: ${SERVER_URL:-https://graduate-student-prize.library.ucdavis.edu}
       GC_BUCKET_BACKUPS: ${GC_BUCKET_BACKUPS:-itis-backups/ucdlib-awards}
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-db.sql.gz}
       UPLOADS_FILE_NAME: ${UPLOADS_FILE_NAME:-uploads.tar.gz}
       WORDPRESS_DB_HOST: ${DB_HOST:-db:3306}
-      WORDPRESS_DB_DATABASE: ${DB_DATABASE}
+      WORDPRESS_DB_DATABASE: ${DB_DATABASE:-wordpress}
       WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
-      WORDPRESS_DB_USER: ${DB_USER}
+      WORDPRESS_DB_USER: ${DB_USER:-wordpress}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     depends_on:
       - db
       - wordpress
     volumes:
       - uploads-data:/uploads
-      - ./gc-writer-key.json:/etc/service-account.json
+      - ../../secrets/gc-writer-key.json:/etc/service-account.json
     command: "./backup/entrypoint.sh"
 
   db:
@@ -83,8 +101,8 @@ services:
       - .env
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_USER: ${DB_USER}
+      MYSQL_DATABASE: ${DB_DATABASE:-wordpress}
+      MYSQL_USER: ${DB_USER:-wordpress}
       MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - db-data:/var/lib/mysql
