--- a/deploy/compose/ucdlib-awards-aggie-open/compose.yaml
+++ b/deploy/compose/ucdlib-awards-aggie-open/compose.yaml
@@ -16,7 +16,7 @@ services:
         max-size: "10m"
         max-file: "2"
     environment:
-      SERVER_URL: ${SERVER_URL:-https://graduate-student-prize.library.ucdavis.edu}
+      SERVER_URL: ${SERVER_URL:-https://aggieopen.library.ucdavis.edu}
       UCDLIB_AWARDS_EMAILING_ENABLED: ${UCDLIB_AWARDS_EMAILING_ENABLED:-true}
       APP_REPORT_ERRORS_ENABLED: ${APP_REPORT_ERRORS_ENABLED:-true}
       APP_REPORT_ERRORS_URL: ${APP_REPORT_ERRORS_URL:-https://client-error-reporter-akwemh35fa-uw.a.run.app}
@@ -26,7 +26,7 @@ services:
       WORDPRESS_DB_USER: ${DB_USER:-wordpress}
       WORDPRESS_CONFIG_EXTRA: |
         define('FORCE_SSL_ADMIN', true);
-      OIDC_CLIENT_ID: ${OIDC_CLIENT_ID:-graduate-prize}
+      OIDC_CLIENT_ID: ${OIDC_CLIENT_ID:-aggie-open}
       OIDC_ENDPOINT_LOGIN_URL: ${OIDC_ENDPOINT_LOGIN_URL:-https://auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/auth}
       OIDC_ENDPOINT_USERINFO_URL: ${OIDC_ENDPOINT_USERINFO_URL:-}
       OIDC_ENDPOINT_TOKEN_URL: ${OIDC_ENDPOINT_TOKEN_URL:-https://auth.library.ucdavis.edu/realms/ucdlib-awards/protocol/openid-connect/token}
@@ -50,8 +50,8 @@ services:
       - .env
     environment:
       RUN_INIT: "true"
-      INIT_DATA_ENV: ${INIT_DATA_ENV:-graduate-prize}
-      SERVER_URL: ${SERVER_URL:-https://graduate-student-prize.library.ucdavis.edu}
+      INIT_DATA_ENV: ${INIT_DATA_ENV:-aggie-open}
+      SERVER_URL: ${SERVER_URL:-https://aggieopen.library.ucdavis.edu}
       GC_BUCKET_BACKUPS: ${GC_BUCKET_BACKUPS:-itis-backups/ucdlib-awards}
       GC_PROJECT: ${GC_PROJECT:-digital-ucdavis-edu}
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-db.sql.gz}
@@ -76,8 +76,8 @@ services:
     restart: always
     environment:
       RUN_BACKUP: "true"
-      BACKUP_DATA_ENV: ${BACKUP_DATA_ENV:-graduate-prize}
-      SERVER_URL: ${SERVER_URL:-https://graduate-student-prize.library.ucdavis.edu}
+      BACKUP_DATA_ENV: ${BACKUP_DATA_ENV:-aggie-open}
+      SERVER_URL: ${SERVER_URL:-https://aggieopen.library.ucdavis.edu}
       GC_BUCKET_BACKUPS: ${GC_BUCKET_BACKUPS:-itis-backups/ucdlib-awards}
       BACKUP_FILE_NAME: ${BACKUP_FILE_NAME:-db.sql.gz}
       UPLOADS_FILE_NAME: ${UPLOADS_FILE_NAME:-uploads.tar.gz}
